# lucebox-hub

./: .gitmodules  CONTRIBUTING.md  NOTICE  README.md  RESULTS.md
.github/workflows/: ci.yml
dflash/: .gitignore  CMakeLists.txt  DEVELOPER.md  README.md  RESULTS.md
dflash/docs/: HIP_PERF_PLAN.md  SPEC_PREFILL.md  STRIX_HALO_PFLASH.md
dflash/eval/: README.md
dflash/hip_compat/: cuda_bf16.h
dflash/include/: dflash27b.h
dflash/scripts/: _prefill_hook.py  bench_he.py  bench_llm.py  parity_laguna.py  prefix_cache.py  run.py  server.py  server_tools.py  test_prefix_cache.py  test_server.py
dflash/src/: bsa_launcher.cu  bsa_launcher_hip.cu  cuda_cross_device_copy.cpp  device_runtime.h  f16_convert.cu  flashprefill.cpp  flashprefill.h  flashprefill_f16.cu  flashprefill_kernels.cu  flashprefill_kernels.hip.cu  flashprefill_q8.cpp  flashprefill_scalar.cu  flashprefill_select.cpp  gguf_target_loader.cpp  internal.h  kv_quant.cpp  kv_quant.h  laguna_daemon.cpp  laguna_internal.h  laguna_target_graph.cpp  laguna_target_loader.cpp  prefix_cache.cpp  qwen35_target_graph.cpp  qwen3_0p6b_drafter.h  qwen3_0p6b_graph.cpp  qwen3_0p6b_loader.cpp  qwen3_drafter.cpp  (+2 more)
megakernel/: README.md  RESULTS.md  bench_pp_tg.py  final_bench.py  model_nvfp4.py  prefill.cu  setup.py
pflash/: README.md  pyproject.toml
pflash/pflash/: __init__.py  dflash_client.py  llama_cli.py  platform.py  prompt_compressor.py
pflash/tests/: bench_niah_cpp.py  bench_niah_llama.py  bench_ruler64_compare.py  common_words_gen.py  niah_gen.py  niah_multi_gen.py  test_llama_cli.py  test_prompt_compressor.py
(+60 files in other folders)
