[project]
name = "pflash"
version = "0.4.0"
description = "Prompt-compression tooling for lucebox dflash and ROCm/HIP llama.cpp runs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "lucebox"}]
license = {text = "MIT"}
keywords = ["llm", "speculative-decoding", "prefill", "long-context", "qwen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# The CUDA daemon path only needs tokenizers, but the Strix Halo prompt-
# compression path uses a small HF model through PyTorch. Keep torch optional so
# daemon-only users do not have to install it.
dependencies = [
    "transformers>=4.50",
]

[project.optional-dependencies]
accelerators = [
    "torch>=2.7",
]

[project.urls]
Homepage = "https://github.com/Luce-Org/lucebox-hub"
Source = "https://github.com/Luce-Org/lucebox-hub/tree/main/pflash"
Blog = "https://lucebox.com/blog/pflash"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pflash*"]
